# bmscientist

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  update_extract.py
data/coscientist/rankings/: ea9eb83c-2a4b-4867-a3ce-212293e4c618.jsonl
data/graph/edges/: Company_PRODUCES_Product.parquet  Product_USED_IN_Application.parquet
data/graph/enrichment/: GraphEnrichmentClaim.parquet
data/pricing/: plasticportal_prices.json
prompts/: README.md
prompts/agents/: evidence_classifier.md  generation_agent.md  graph_enrichment_agent.md  meta_review_agent.md  reflection_agent.md
src/app_discovery_agent/: __init__.py  agent.py  classify.py  cli.py  config.py  coscientist_agents.py  coscientist_cli.py  coscientist_models.py  coscientist_store.py  embeddings.py  extract.py  graph_backfill.py  graph_enrichment.py  graph_market.py  llm.py  manual_ingest.py  models.py  price_cache.py  prompt_library.py  search.py  store.py
src/bmscientist/: __init__.py  __main__.py  agent.py  chunking.py  classify.py  cli.py  config.py  coscientist_agents.py  coscientist_cli.py  coscientist_models.py  coscientist_store.py  cost_tracking.py  embeddings.py  extract.py  graph_backfill.py  graph_enrichment.py  graph_estimate.py  graph_market.py  graph_query.py  ingestion.py  llm.py  manual_ingest.py  material_alias.py  models.py  price_cache.py  prompt_library.py  retrieval.py  search.py  storage_protocols.py  store.py
src/bmscientist/prompts/agents/: discovery_agent.md  evolution_agent.md  final_portfolio_agent.md  generation_agent.md  graph_enrichment_agent.md  graph_estimate_agent.md  graph_query_agent.md  meta_review_agent.md  proximity_check_agent.md  ranking_agent.md  reflection_agent.md  (+1 more)
src/bmscientist/resources/: __init__.py
src/bmscientist/skills/: __init__.py  base.py  episuite.py  hansen_solubility.py  molecule_skills.py  molecule_support.py  polymer_skills.py  pubchem_support.py  rdkit_skills.py  registry.py  runner.py  rxn4chemistry.py  toxicity_skills.py
tests/: test_agent_graph_followup.py  test_chunking.py  test_config.py  test_coscientist.py  test_cost_tracking.py  test_episuite_skill.py  test_extract.py  test_feedback_meta_review.py  test_graph_backfill.py  test_graph_enrichment.py  test_graph_estimate.py  test_graph_query.py  test_manual_ingest.py  test_material_alias.py  test_models.py  test_molecule_skills.py  test_new_capability_skills.py  test_price_cache.py  test_private_ingestion.py  test_prompt_library.py  test_retrieval.py  test_rxn4chemistry_skill.py  test_search.py  test_store.py
