[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bmscientist"
version = "0.9.5"
description = "Agentic framework for scientific materials discovery — hypothesis generation, evidence retrieval, and knowledge graph enrichment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Mark Ewing" }
]
dependencies = [
  "RXN4Chemistry>=1.15.0",
  "beautifulsoup4>=4.9.0",
  "cryptography>=42.0.0",
  "duckdb>=1.5.4",
  "langgraph>=0.2.34",
  "lancedb>=0.24.0",
  "mordred>=1.2.0",
  "openai>=1.51.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.2",
  "pypdf>=4.3.1",
  "pyarrow>=17.0.0",
  "rdkit>=2026.3.3",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=13.9.2",
  "sentence-transformers>=3.2.1",
  "trafilatura>=1.12.2",
  "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[project.scripts]
bmscientist = "bmscientist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bmscientist"]

[tool.hatch.build.targets.wheel.force-include]
"src/bmscientist/prompts" = "bmscientist/prompts"
"src/bmscientist/resources" = "bmscientist/resources"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.3",
]
